<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_text"
        style="@style/NameStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/nickname_edit"
        style="@style/NameStyle"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/what_is_your_nickname"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="@+id/nickname_edit"
        app:layout_constraintStart_toStartOf="@+id/nickname_edit"
        app:layout_constraintTop_toBottomOf="@+id/nickname_edit" />

    <TextView
        android:id="@+id/nickname_text"
        style="@style/NameStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="@dimen/small_padding"
        android:text="ergrg"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/box_5"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/box_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_4"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/box_1"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toTopOf="@+id/box_2"
        app:layout_constraintEnd_toStartOf="@+id/box_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/box_2"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/box_3"
        app:layout_constraintEnd_toStartOf="@+id/box_7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/box_3"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/box_4"
        app:layout_constraintEnd_toStartOf="@+id/box_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_2"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/box_4"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/box_5"
        app:layout_constraintEnd_toStartOf="@+id/box_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_3"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/box_7"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/box_8"
        app:layout_constraintEnd_toStartOf="@+id/box_12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_2"
        app:layout_constraintTop_toBottomOf="@+id/box_6" />

    <TextView
        android:id="@+id/box_8"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/box_9"
        app:layout_constraintEnd_toStartOf="@+id/box_13"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_3"
        app:layout_constraintTop_toBottomOf="@+id/box_7" />

    <TextView
        android:id="@+id/box_9"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/box_10"
        app:layout_constraintEnd_toStartOf="@+id/box_14"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_4"
        app:layout_constraintTop_toBottomOf="@+id/box_8" />

    <TextView
        android:id="@+id/box_10"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/box_15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_5"
        app:layout_constraintTop_toBottomOf="@+id/box_9" />

    <TextView
        android:id="@+id/box_11"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toTopOf="@+id/box_12"
        app:layout_constraintEnd_toStartOf="@+id/box_16"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box_12"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/box_13"
        app:layout_constraintEnd_toStartOf="@+id/box_17"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_7"
        app:layout_constraintTop_toBottomOf="@+id/box_11" />

    <TextView
        android:id="@+id/box_13"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/box_14"
        app:layout_constraintEnd_toStartOf="@+id/box_18"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_8"
        app:layout_constraintTop_toBottomOf="@+id/box_12" />

    <TextView
        android:id="@+id/box_14"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/box_15"
        app:layout_constraintEnd_toStartOf="@+id/box_19"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_9"
        app:layout_constraintTop_toBottomOf="@+id/box_13" />

    <TextView
        android:id="@+id/box_15"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/box_20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_10"
        app:layout_constraintTop_toBottomOf="@+id/box_14" />

    <TextView
        android:id="@+id/box_16"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toTopOf="@+id/box_17"
        app:layout_constraintEnd_toStartOf="@+id/box_21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_11"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box_17"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/box_18"
        app:layout_constraintEnd_toStartOf="@+id/box_22"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_12"
        app:layout_constraintTop_toBottomOf="@+id/box_16" />

    <TextView
        android:id="@+id/box_18"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/box_19"
        app:layout_constraintEnd_toStartOf="@+id/box_23"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_13"
        app:layout_constraintTop_toBottomOf="@+id/box_17" />

    <TextView
        android:id="@+id/box_19"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/box_20"
        app:layout_constraintEnd_toStartOf="@+id/box_24"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_14"
        app:layout_constraintTop_toBottomOf="@+id/box_18" />

    <TextView
        android:id="@+id/box_20"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/box_25"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_15"
        app:layout_constraintTop_toBottomOf="@+id/box_19" />

    <TextView
        android:id="@+id/box_21"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/box_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_16"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box_22"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/box_23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_17"
        app:layout_constraintTop_toBottomOf="@+id/box_21" />

    <TextView
        android:id="@+id/box_23"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/box_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_18"
        app:layout_constraintTop_toBottomOf="@+id/box_22" />

    <TextView
        android:id="@+id/box_24"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/box_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_19"
        app:layout_constraintTop_toBottomOf="@+id/box_23" />

    <TextView
        android:id="@+id/box_25"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_20"
        app:layout_constraintTop_toBottomOf="@+id/box_24" />

    <TextView
        android:id="@+id/box_6"
        style="@style/BlackBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toTopOf="@+id/box_7"
        app:layout_constraintEnd_toStartOf="@+id/box_11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_1"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>